--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.8.0"
+    "@astrojs/tailwind": "^4.0.0",
+    "astro": "^2.8.0",
+    "boxicons": "^2.1.4",
+    "tailwindcss": "^3.3.2"
   }
 }
